# AronaNET

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/aronanet/clients/cli/: test_client.py
src/aronanet/clients/mobile/: termux.py
src/aronanet/protocol/: crypto.py  messages.py
src/aronanet/server/: bore_manager.py  connection.py  connection_manager.py  server.py
src/aronanet/utils/: config.py  logger.py
tests/: __init__.py  test_bore.py  test_conn_manager.py  test_protocol.py  test_serveo.py  test_server.py  test_termux.py
