[project]
name = "aronanet"
version = "0.1.0"
description = "Custom chat protocol - Blue Archive themed"
authors = [{name = "XeonXE534", email = "your-email@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

terminal = [
    "textual>=0.45.0",
]

[project.scripts]
aronanet-server = "aronanet.server.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
