[project]
name = "aronanet"
version = "0.1.0"
description = "Custom chat app thingamajig"
readme = "README.md"
authors = [{name = "XeonXE534", email = "your-email@example.com"}]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
    "pyaml",
    "asyncio",
    "rich"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

terminal = [
    "textual>=0.45.0",
]

[project.scripts]
aonet-server = "aronanet.server.server:main"
aonet-client = "aronanet.clients.cli.test_client:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
